# gridpulse-analytics

./: .gitignore  README.md  main.py  pyproject.toml
apps/streamlit/: app.py
images/: step-1-to-7-architecture-evolution.md  step-1-to-7-service-flow.md
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
markdowns/: README.md  TODOS.md  logs.md  plan.md
ops/scripts/: fetch_flink_jars.sh
src/ingestion/: dlt_raw_ingestion.py  download_day_ahead.py
src/replay/: replay_day_ahead.py
src/streaming/: hourly_lmp_job.py
transform/dbt/: dbt_project.yml
transform/dbt/models/marts/: mrt_daily_lmp_summary_by_location.sql  mrt_daily_lmp_summary_by_location.yml  mrt_hourly_lmp_by_location.sql  mrt_hourly_lmp_by_location.yml
transform/dbt/models/sources/: iso_ne_raw_sources.yml
transform/dbt/models/staging/iso_ne/: stg_iso_ne_day_ahead_hourly_lmp.sql  stg_iso_ne_day_ahead_hourly_lmp.yml
transform/dbt/profiles/: .user.yml  profiles.yml
transform/dbt/tests/: assert_mrt_daily_lmp_summary_by_location_unique_grain.sql  assert_mrt_daily_lmp_summary_by_location_valid_hours.sql  assert_mrt_hourly_lmp_by_location_positive_row_count.sql  assert_mrt_hourly_lmp_by_location_unique_grain.sql  assert_stg_iso_ne_day_ahead_hourly_lmp_hour_ending_range.sql
